<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentLayout"
    android:fillViewport="true"
    android:scrollbars="none"
    android:background="@drawable/background">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/ll_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            app:riv_oval="true"
            android:src="@drawable/user"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Deepak Bagora"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:drawableRight="@drawable/edit_ac"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/text_size_large"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_my_preference"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:background="@drawable/timeline_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/my_preference" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_preference"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_size_normal"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/choose_who"
                    android:textColor="@color/hint_color"
                    android:textSize="@dimen/text_size_normal" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/frd_arrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_invite_friend"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:background="@drawable/timeline_background"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/invite_friends" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite_friends"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_normal"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/invite_earn"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/frd_arrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_setting"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:background="@drawable/timeline_background"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/settings_ac" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_normal"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/manage_noti"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/frd_arrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_need"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:background="@drawable/timeline_background"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/need_help" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/need_help"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_normal"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/faq"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/frd_arrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_feedback"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:background="@drawable/timeline_background"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/feedback" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_normal"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/submit_feedback"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/frd_arrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_about"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:background="@drawable/timeline_background"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/about" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_normal"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/app_company"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/frd_arrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_facebook"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:background="@drawable/timeline_background"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/facebook_like" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Like"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_normal"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="Like us on facebook"
                android:textColor="@color/hint_color"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/frd_arrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_logout"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:background="@drawable/timeline_background"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/about" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Logout"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_normal"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/hint_color"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/frd_arrow" />

    </LinearLayout>

    <WebView
        android:id="@+id/web_view"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"/>
</LinearLayout>
</ScrollView>
</layout>