<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".AddMoreActivity">

    <RelativeLayout
        android:id="@+id/relParent"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/back_btn" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Add More Info"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg_rounder_withborderline"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_layout"
            android:text="Continue As Laura Wilson"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/add_more_text"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <View
            android:id="@+id/myview"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:padding="15dp"
           android:text="@string/edit"
           android:textStyle="bold"
           android:textSize="16sp"
           android:layout_gravity="center"
           android:drawableLeft="@drawable/edit"
           android:drawablePadding="7dp"
           android:textColor="@color/white"/>

    </LinearLayout>


    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:textSize="16sp"
        android:background="@drawable/button_bg_rounder_login"/>

</LinearLayout>